<resources>
    <string name="app_name">bil496</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_foundations">Foundations</string>
    <string name="araba">Araba</string>
    <string name="otobus">Otobüs</string>
    <string name="bisiklet">Bisiklet</string>
    <string name="elektrik">Elektrik</string>
    <string name="dogalgaz">Doğalgaz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button">Button</string>
    <string name="ucak">Uçak</string>

    <string-array name="car_types">
        <item>SmallDieselCar</item>
        <item>MediumDieselCar</item>
        <item>LargeDieselCar</item>
        <item>MediumHybridCar</item>
        <item>LargeHybridCar</item>
        <item>MediumLPGCar</item>
        <item>LargeLPGCar</item>
        <item>MediumCNGCar</item>
        <item>LargeCNGCar</item>
        <item>SmallPetrolVan</item>
        <item>LargePetrolVan</item>
        <item>SmallDielselVan</item>
        <item>MediumDielselVan</item>
        <item>LargeDielselVan</item>
        <item>LPGVan</item>
        <item>CNGVan</item>
        <item>SmallPetrolCar</item>
        <item>MediumPetrolCar</item>
        <item>LargePetrolCar</item>
    </string-array>

    <string-array name="flight_types">
        <item>LongFirstClassFlight</item>
        <item>LongBusinessClassFlight</item>
        <item>LongPremiumClassFlight</item>
        <item>LongEconomyClassFlight</item>
        <item>ShortBusinessClassFlight</item>
        <item>ShortEconomyClassFlight</item>
        <item>DomesticFlight</item>
    </string-array>

    <string-array name="publictransport_types">
        <item>Taxi</item>
        <item>ClassicBus</item>
        <item>EcoBus</item>
        <item>Coach</item>
        <item>NationalTrain</item>
        <item>LightRail</item>
        <item>Subway</item>
        <item>FerryOnFoot</item>
        <item>FerryInCar</item>
    </string-array>

    <string-array name="motorbike_types">
        <item>SmallMotorBike</item>
        <item>MediumMotorBike</item>
        <item>LargeMotorBike</item>
    </string-array>

    <string name="profile_picture">profile_picture</string>
    <string name="LOGOUT">LOGOUT</string>
    <string name="bio_d_zenle">Bio düzenle</string>
    <string name="yen_g_nder">YENİ GÖNDERİ</string>
    <string name="date">Date</string>
    <string name="header">Header</string>
    <string name="description">Description</string>
    <string name="arkadaslar">ARKADAŞLAR</string>
    <string name="arkadasekle">Arkadaş ekle</string>
    <string name="leaderBoard">Lider tablosu</string>
    <string name="isim">isim</string>
    <string name="email">email</string>
    <string name="iptal">İPTAL</string>


    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_app_id">4238471716163226</string>
    <string name="fb_login_protocol_scheme">fb4238471716163226</string>

</resources>