<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" tools:context=".ui.carboncalculation.CarbonCalculation">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/piechart"
        android:layout_width="350dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        ></com.github.mikephil.charting.charts.PieChart>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/piechart"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAlignment="center"
                android:text="Karbon Ayak İzi Hesaplama"
                android:textSize="24sp"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:textColor="@color/darkgreen"
                />

            <TextView
                android:id="@+id/active_journey_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:layout_marginTop="15dp"
                android:text="Aktif Yolculuk"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:gravity="center_horizontal" />

            <View
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                android:baselineAligned="false">
                <LinearLayout
                    android:id="@+id/active_journey_button"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/lightgreen"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        app:tint="@color/grey"
                        android:src="@drawable/ic_route" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/darkgreen"
                        android:text="Yolculuk"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:gravity="center_horizontal" />

                </LinearLayout>
            </LinearLayout>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="15dp"
                android:text="Geçmiş Yolculuk"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:gravity="center_horizontal" />

            <View
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:baselineAligned="false">
                <LinearLayout
                    android:id="@+id/fly_button"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/lightgreen"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        app:tint="@color/grey"
                        android:src="@drawable/ic_car" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/darkgreen"
                        android:text="@string/ucak"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:gravity="center_horizontal" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/car_button"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/lightgreen"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        app:tint="@color/grey"
                        android:src="@drawable/ic_car" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/darkgreen"
                        android:text="@string/araba"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:gravity="center_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bus_button"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/lightgreen"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        app:tint="@color/grey"
                        android:src="@drawable/ic_bus"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/darkgreen"
                        android:text="@string/otobus"
                        android:textSize="18sp"
                        android:textColor="#ffffff"
                        android:gravity="center_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/bicycle_button"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/lightgreen"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_bike"
                        app:tint="@color/grey" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/darkgreen"
                        android:text="@string/bisiklet"
                        android:textSize="18sp"
                        android:textColor="#ffffff"
                        android:gravity="center_horizontal" />

                </LinearLayout>


            </LinearLayout>



            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:layout_marginTop="15dp"
                android:text="Utility"
                android:textSize="18sp"
                android:textColor="#707070"
                android:gravity="center_horizontal" />

            <View
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"/>

            <!-- Second Row-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:baselineAligned="false">
                <LinearLayout
                    android:id="@+id/electricity_button"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:orientation="vertical"
                    android:background="@color/lightgreen"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        app:tint="@color/grey"
                        android:src="@drawable/ic_electricity"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/darkgreen"
                        android:text="@string/elektrik"
                        android:textSize="18sp"
                        android:textColor="#ffffff"
                        android:gravity="center_horizontal" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/gas_button"
                    android:layout_width="0dp"
                    android:layout_height="120dp"
                    android:layout_weight="1"
                    android:layout_margin="2dp"
                    android:layout_marginBottom="50dp"
                    android:orientation="vertical"
                    android:background="@color/lightgreen"
                    >
                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_gravity="center"
                        app:tint="@color/grey"
                        android:src="@drawable/ic_gas"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="8dp"
                        android:layout_marginTop="20dp"
                        android:background="@color/darkgreen"
                        android:text="@string/dogalgaz"
                        android:textSize="18sp"
                        android:textColor="#ffffff"
                        android:gravity="center_horizontal" />

                </LinearLayout>



            </LinearLayout>
            <!-- End Second Row-->

        </LinearLayout>
   </RelativeLayout>
    </ScrollView>
